--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "contentful": "^7.14.13",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
