--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "contentful": "^7.14.13",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "jquery": "^3.5.1",
+    "node-sass": "^5.0.0",
+    "nuxt": "^2.14.6",
+    "sass-loader": "^10.1.0"
   },
   "devDependencies": {}
 }
